--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -74,8 +74,8 @@
   border: 4px solid var(--color-text);
   border-radius: 50%;
   font-weight: 700;
-  vertical-align: super;
-  margin-left: 8px;
+  vertical-align: text-top;
+  margin-left: 20px;
   line-height: 0;
   padding-bottom: 2px;
 }
